# libgai

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: GMock.cmake
include/libgai/: assoc_array.h  error.h  gai.h  hit.h  hit_event.h  hit_pageview.h  hit_queue.h  tracker.h  transport.h
src/: CMakeLists.txt  assoc_array.c  gai.c  hit.c  hit_event.c  hit_pageview.c  hit_queue.c  tracker.c  transport.c
test/: CMakeLists.txt  MockHitQueue.cpp  MockHitQueue.h  MockTransport.cpp  MockTransport.h  assoc_array_test.cpp  gai_test.cpp  hit_event_test.cpp  hit_queue_test.cpp  hit_test.cpp  tracker_test.cpp  transport_test.cpp
transport/: CMakeLists.txt
transport/curl/: CMakeLists.txt
transport/curl/example/: CMakeLists.txt  main.cpp
transport/curl/include/libgai/curl/: post.h  serialize.h  transport.h
transport/curl/src/: CMakeLists.txt  post.c  serialize.c  transport.c
transport/curl/test/: CMakeLists.txt  serialize_test.cpp
